Add a single-centos-8-node-nested-virt nodeset
https://review.opendev.org/c/openstack/tripleo-ci/+/799958
defines a single-centos-8-node-nested-virt upstream.

This review defines the same nodeset - using a
PSI label to run scenario010 kvm tests.

Change-Id: I0d9763ccba0b3fcbeb689431bda4e7b427e23b88

--- a/zuul.d/nodesets.yaml
+++ b/zuul.d/nodesets.yaml
@@ -392,6 +392,19 @@
       - name: peers
         nodes: []
 
+# Fake nested-virt nodeset - default to PSI
+- nodeset:
+    name: single-centos-8-node-nested-virt
+    nodes:
+      - name: primary
+        label: upstream-centos-8-stream-psi-public
+    groups:
+      - name: switch
+        nodes:
+          - primary
+      - name: peers
+        nodes: []
+
 # Fake nodesets to resolve puppet jobs
 - nodeset:
     name: ubuntu-focal
