Move scenario-010 kvm jobs run on a psi nodeset
vexxhost nodes do not support running scenario-010
kvm jobs. This review move the kvm jobs to run on
PSI nodesets.

Tested on:
https://review.rdoproject.org/r/c/testproject/+/35646

Change-Id: Iced9fc7be826b55c35754c47d14bc526841eacaf

--- a/zuul.d/standalone-jobs.yaml
+++ b/zuul.d/standalone-jobs.yaml
@@ -332,6 +332,7 @@
 - job:
     name: periodic-tripleo-ci-centos-8-scenario010-kvm-standalone-master
     parent: tripleo-ci-base-standalone-periodic-centos-8
+    nodeset: single-centos-8-node-psi
     vars:
       tags:
         - build
