Add job deps-cbs-final-build to deps template
This is part of the new dependencies process. This patch is adding the
job deps-cbs-final-build to the gate pipeline. This job has been added
in [1] and is the one doing the actual builds.

[1] https://review.rdoproject.org/r/c/config/+/35812

Change-Id: Ie2e7bffb7eac41d51845deb0a8ded076e64e7c6e

--- a/zuul.d/project-templates.yaml
+++ b/zuul.d/project-templates.yaml
@@ -62,7 +62,7 @@
         - deps-cbs-validate
     gate:
       jobs:
-        - deps-cbs-validate
+        - deps-cbs-final-build
 
 # TripleO CI templates
 - project-template:
