Add "full-tempest-api" in network component
In downstream, We faced a bug[1] in the integration line
via "full-tempest-api" job.

This can happen in Upstream as well, Adding "full-tempest-api" in the
network component so that it only blocks network component line
promotion, not the whole integration line.

[1] https://bugzilla.redhat.com/show_bug.cgi?id=2003921

Change-Id: I07f4104854a56c92afea57321a1e93e6b634dac1

--- a/zuul.d/component-jobs-master.yaml
+++ b/zuul.d/component-jobs-master.yaml
@@ -758,6 +758,12 @@
       component: compute
 
 - job:
+    name: periodic-tripleo-ci-centos-8-standalone-full-tempest-api-network-master
+    parent: periodic-tripleo-ci-centos-8-standalone-full-tempest-api-component-master
+    vars:
+      component: network
+
+- job:
     name: periodic-tripleo-ci-centos-8-standalone-full-tempest-api-tempest-master
     parent: periodic-tripleo-ci-centos-8-standalone-full-tempest-api-component-master
     vars:
