--- a/zuul.d/component-pipeline-master.yaml
+++ b/zuul.d/component-pipeline-master.yaml
@@ -119,6 +119,9 @@
         - periodic-tripleo-ci-centos-8-scenario007-standalone-network-master:
             dependencies:
               - periodic-tripleo-centos-8-master-component-network-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-standalone-full-tempest-api-network-master:
+            dependencies:
+              - periodic-tripleo-centos-8-master-component-network-promote-consistent-to-component-ci-testing
         - periodic-tripleo-ci-centos-8-scenario010-standalone-network-master:
             dependencies:
               - periodic-tripleo-centos-8-master-component-network-promote-consistent-to-component-ci-testing
