--- a/zuul.d/component-pipeline-ussuri.yaml
+++ b/zuul.d/component-pipeline-ussuri.yaml
@@ -113,6 +113,9 @@
         - periodic-tripleo-ci-centos-8-scenario010-standalone-network-ussuri:
             dependencies:
               - periodic-tripleo-centos-8-ussuri-component-network-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-standalone-full-tempest-api-network-ussuri:
+            dependencies:
+              - periodic-tripleo-centos-8-ussuri-component-network-promote-consistent-to-component-ci-testing
         - periodic-tripleo-ci-centos-8-containers-multinode-network-ussuri:
             dependencies:
               - periodic-tripleo-centos-8-ussuri-component-network-promote-consistent-to-component-ci-testing
