--- a/zuul.d/component-pipeline-victoria.yaml
+++ b/zuul.d/component-pipeline-victoria.yaml
@@ -119,6 +119,9 @@
         - periodic-tripleo-ci-centos-8-scenario010-standalone-network-victoria:
             dependencies:
               - periodic-tripleo-centos-8-victoria-component-network-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-standalone-full-tempest-api-network-victoria:
+            dependencies:
+              - periodic-tripleo-centos-8-victoria-component-network-promote-consistent-to-component-ci-testing
         - periodic-tripleo-ci-centos-8-containers-multinode-network-victoria:
             dependencies:
               - periodic-tripleo-centos-8-victoria-component-network-promote-consistent-to-component-ci-testing
