--- a/zuul.d/component-pipeline-wallaby.yaml
+++ b/zuul.d/component-pipeline-wallaby.yaml
@@ -131,6 +131,9 @@
         - periodic-tripleo-ci-centos-8-scenario010-standalone-network-wallaby:
             dependencies:
               - periodic-tripleo-centos-8-wallaby-component-network-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-standalone-full-tempest-api-network-wallaby:
+            dependencies:
+              - periodic-tripleo-centos-8-wallaby-component-network-promote-consistent-to-component-ci-testing
         - periodic-tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001-network-wallaby:
             dependencies:
               - periodic-tripleo-centos-8-wallaby-component-network-promote-consistent-to-component-ci-testing
