Add "full-tempest-api" in network component
In downstream, We faced a bug[1] in the integration line
via "full-tempest-api" job.

This can happen in Upstream as well, Adding "full-tempest-api" in the
network component so that it only blocks network component line
promotion, not the whole integration line.

[1] https://bugzilla.redhat.com/show_bug.cgi?id=2003921

Change-Id: I07f4104854a56c92afea57321a1e93e6b634dac1

--- a/zuul.d/component-pipeline-train.yaml
+++ b/zuul.d/component-pipeline-train.yaml
@@ -125,6 +125,9 @@
         - periodic-tripleo-ci-centos-8-scenario010-standalone-network-train:
             dependencies:
               - periodic-tripleo-centos-8-train-component-network-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-standalone-full-tempest-api-network-ussuri:
+            dependencies:
+              - periodic-tripleo-centos-8-train-component-network-promote-consistent-to-component-ci-testing
         - periodic-tripleo-ci-centos-8-containers-multinode-network-train:
             dependencies:
               - periodic-tripleo-centos-8-train-component-network-promote-consistent-to-component-ci-testing
