Enabling validations for baremetal component
Signed-off-by: Jiri Podivin <jpodivin@redhat.com>
Change-Id: Ia67dcbdc46129c0461366320dfdc1e6487536135

--- a/zuul.d/component-jobs-master.yaml
+++ b/zuul.d/component-jobs-master.yaml
@@ -409,6 +409,12 @@
       component: baremetal
 
 - job:
+    name: periodic-tripleo-ci-centos-8-standalone-baremetal-master-validation
+    parent: periodic-tripleo-ci-centos-8-standalone-component-master-validation
+    vars:
+      component: baremetal
+
+- job:
     name: periodic-tripleo-ci-centos-8-standalone-cinder-master
     parent: periodic-tripleo-ci-centos-8-standalone-component-master
     vars:
