--- a/zuul.d/integration-pipeline-wallaby.yaml
+++ b/zuul.d/integration-pipeline-wallaby.yaml
@@ -63,16 +63,19 @@
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push-wallaby
               - periodic-tripleo-centos-8-buildimage-overcloud-full-wallaby
+              - periodic-tripleo-centos-8-buildimage-overcloud-hardened-uefi-full-wallaby
               - periodic-tripleo-centos-8-buildimage-ironic-python-agent-wallaby
         - periodic-tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset035-wallaby:
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push-wallaby
               - periodic-tripleo-centos-8-buildimage-overcloud-full-wallaby
+              - periodic-tripleo-centos-8-buildimage-overcloud-hardened-uefi-full-wallaby
               - periodic-tripleo-centos-8-buildimage-ironic-python-agent-wallaby
         - periodic-tripleo-ci-centos-8-ovb-1ctlr_2comp-featureset020-wallaby:
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push-wallaby
               - periodic-tripleo-centos-8-buildimage-overcloud-full-wallaby
+              - periodic-tripleo-centos-8-buildimage-overcloud-hardened-uefi-full-wallaby
               - periodic-tripleo-centos-8-buildimage-ironic-python-agent-wallaby
         - periodic-tripleo-ci-centos-8-ovb-1ctlr_1comp-featureset002-wallaby:
             dependencies:
@@ -81,6 +84,7 @@
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push-wallaby
               - periodic-tripleo-centos-8-buildimage-overcloud-full-wallaby
+              - periodic-tripleo-centos-8-buildimage-overcloud-hardened-uefi-full-wallaby
               - periodic-tripleo-centos-8-buildimage-ironic-python-agent-wallaby
         ## multinode
         - periodic-tripleo-ci-centos-8-scenario007-multinode-oooq-container-wallaby:
